--- a/ADMFacturar/Views/Reportes/Index.cshtml
+++ b/ADMFacturar/Views/Reportes/Index.cshtml
@@ -12,12 +12,13 @@
     <div class="container mx-auto py-8">
         <div class="grid grid-cols-1 md:grid-cols-3 lg:grid-cols-4 gap-4">
 
+            <!-- Total de Venta -->
             <div class="bg-white rounded-lg shadow-md p-6 text-center">
                 <i class="fas fa-chart-line text-5xl text-blue-500 mb-4"></i>
                 <h3 class="text-lg font-semibold">Total de Venta</h3>
                 <p class="text-gray-600">₡5000</p>
             </div>
-
+                  <!-- Total de Cobro -->
             <div class="bg-white rounded-lg shadow-md p-6 text-center">
                 <i class="fas fa-coins text-5xl text-blue-500 mb-4"></i>
                 <h3 class="text-lg font-semibold">Total de Cobro</h3>
