--- a/ADMFacturar/Views/Shared/Header.cshtml
+++ b/ADMFacturar/Views/Shared/Header.cshtml
@@ -1,10 +1,13 @@
 ﻿@{
-}﻿
-﻿<header class="w-full items-center bg-sidebar py-2 px-6 hidden sm:flex">
+}
+
+<header class="w-full items-center bg-sidebar py-2 px-6 hidden sm:flex">
     <div class="relative w-1/2 flex justify-start"></div>
     <div class="relative w-1/2 flex justify-end">
-        <button class="relative z-10 w-12 h-12 rounded-full overflow-hidden border-4 border-gray-400 hover:border-gray-300 focus:outline-none">
-            <i class="fas fa-user" style="color:white"></i>
-        </button>
+        <a asp-controller="Seguridad" asp-action="Login">
+                <button class="relative z-10 w-12 h-12 rounded-full overflow-hidden border-4 border-gray-400 hover:border-gray-300 focus:outline-none">
+                    <i class="fas fa-user" style="color:white"></i>
+                </button>
+            </a>
     </div>
 </header>
