Ajuste de Administracion y Seguridad

--- a/ADMFacturar/Views/Inventario/Index.cshtml
+++ b/ADMFacturar/Views/Inventario/Index.cshtml
@@ -54,7 +54,7 @@
             <i class="fas fa-list mr-3"></i> Listado de Proveedores
         </p>
         <div>
-            <button asp-action="AgregarInventario" class="max-w-xs p-4 bg-none border border-gray-200 rounded-lg shadow dark:bg-white-800 dark:border-white-700 hover:bg-white hover:text-blue-500 text-white" onclick="abrirModal('modalCrearUsuario')">Crear Ingreso de Productos</button>
+            <a asp-action="AgregarInventario" class="max-w-xs p-4 bg-none border border-gray-200 rounded-lg shadow dark:bg-white-800 dark:border-white-700 hover:bg-white hover:text-blue-500 text-white" onclick="abrirModal('modalCrearUsuario')">Crear Ingreso de Productos</a>
         </div>
     </div>
     <div class="bg-white overflow-auto">
