--- a/ADMFacturar/Views/Inventario/AgregarArticulos.cshtml
+++ b/ADMFacturar/Views/Inventario/AgregarArticulos.cshtml
@@ -40,6 +40,8 @@
         <div class="form-group">
             <input asp-action="AgregarInventario" type="submit" value="Confirmar" class="btn-info" style="background-color: #3985CD; color: #fff; padding: 5px; border-radius: 5px; ">
             <input asp-action="AgregarArticulos" type="submit" value="Agregar Artículo" class="btn-info" style="background-color: #3985CD; color: #fff; padding: 5px; border-radius: 5px; ">
+            <input asp-action="AgregarArticulos" type="submit" value="Agregar Articulo" class="btn-info" style="background-color: #3985CD; color: #fff; padding: 5px; border-radius: 5px; ">
+
         </div>
     </div>
 </form>
