--- a/ADMFacturar/Views/Facturas/Index.cshtml
+++ b/ADMFacturar/Views/Facturas/Index.cshtml
@@ -1,57 +1,42 @@
-﻿@*
+﻿<link href="~/css/custom.css" rel="stylesheet" />
 
-*@
+<div class="w-full">
+</div>
 
-<!--                  Incio de form                        -->
+
 <form>
     <div class="border-b border-gray-900/10 pb-12">
-        <h2 class="text-base font-semibold leading-7 text-white">Facturación</h2>
-        <!--                  Fechas del Form                        -->
-        <div class="mt-4 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
+        <h2 class="text-base font-semibold leading-7 text-white">Filtros</h2>
+        <div class="mt-4 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-3">
 
-            <div class="sm:col-span-2 sm:col-start-1">
-                <label for="city" class="block text-sm font-medium leading-6 text-white">Fecha Inicio</label>
+            <div class="sm:col-span-1">
+                <label for="document_number" class="block text-sm font-medium leading-6 text-white">Codigo</label>
                 <div class="mt-2">
-                    <input type="date" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
+                    <input type="text" id="document_number" name="document_number" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
                 </div>
             </div>
 
-            <div class="sm:col-span-2">
-                <label for="region" class="block text-sm font-medium leading-6 text-white">Fecha Final</label>
+            <div class="sm:col-span-1">
+                <label for="provider" class="block text-sm font-medium leading-6 text-white">Cedula</label>
                 <div class="mt-2">
-                    <input type="date" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
-                </div>
-            </div>
-            <!--                  Fin de Fechas                        -->
-
-
-            <div class="sm:col-span-2 sm:col-start-1">
-                <label for="email" class="block text-sm font-medium leading-6 text-white">Factura</label>
-                <div class="mt-2">
-                    <input type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
+                    <select id="provider" name="provider" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px; height: 35px;">
+                        <option value="">Seleccionar Proveedor</option>
+                        <!-- LECTURA DE LA BD O OPCIONES ESTÁTICAS -->
+                        <option value="Juridica">Juridica</option>
+                        <option value="Fisica">Fisica</option>
+                    </select>
                 </div>
             </div>
 
-            <div class="sm:col-span-2 ">
-                <label for="city" class="block text-sm font-medium leading-6 text-white">Cliente</label>
+            <div class="sm:col-span-1">
+                <label for="document_number" class="block text-sm font-medium leading-6 text-white">Cliente</label>
                 <div class="mt-2">
-                    <input type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
+                    <input type="text" id="document_number" name="document_number" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
                 </div>
             </div>
-
-            <div class="sm:col-span-2">
-                <label for="region" class="block text-sm font-medium leading-6 text-white">Vendedor</label>
-                <div class="mt-2">
-                    <input type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
-                </div>
-            </div>
-            <!--                  Fin de Datos                        -->
         </div>
     </div>
 </form>
-<!--                  Final de From                        -->
-
-
 
 <div class="w-full">
     <div class="flex justify-between items-center px-6 py-4 border-b">
@@ -59,54 +44,79 @@
             <i class="fas fa-list mr-3"></i> Listado de Facturas
         </p>
         <div>
-            <a asp-action="AgregarFactura" class="max-w-xs p-4 bg-none border border-gray-200 rounded-lg shadow dark:bg-white-800 dark:border-white-700 hover:bg-white hover:text-blue-500 text-white">Crear Factura</a>
-            <a asp-action="RegistroAnulaciones" class="max-w-xs p-4 bg-none border border-gray-200 rounded-lg shadow dark:bg-white-800 dark:border-white-700 hover:bg-white hover:text-blue-500 text-white">Crear Nota de Crédito</a>
-            <a asp-action="RegistroModificaciones" class="max-w-xs p-4 bg-none border border-gray-200 rounded-lg shadow dark:bg-white-800 dark:border-white-700 hover:bg-white hover:text-blue-500 text-white">Crear Nota de Crédito por Monto</a>
+            <a asp-action="AgregarFactura" class="max-w-xs p-4 bg-none border border-gray-200 rounded-lg shadow dark:bg-white-800 dark:border-white-700 hover:bg-white hover:text-blue-500 text-white" >Nueva Factura</a>
+            <a asp-action="RegistroAnulaciones" class="max-w-xs p-4 bg-none border border-gray-200 rounded-lg shadow dark:bg-white-800 dark:border-white-700 hover:bg-white hover:text-blue-500 text-white" >Ver Notas de Crédito</a>
         </div>
+    </div>
+    <div class="bg-white overflow-auto">
+        <table class="min-w-full bg-white border border-gray-300">
+            <thead class="bg-gray-900 text-white">
+                <tr>
+                    <th class="text-center py-3">Código</th>
+                    <th class="text-center py-3">Fecha Emisión</th>
+                    <th class="text-center py-3">Cliente</th>
+                    <th class="text-center py-3">Cédula (Jurídica / Física)</th>
+                    <th class="text-center py-3">Vendedor</th>
+                    <th class="text-center py-3">Condición de Pago</th>
+                    <th class="text-center py-3">Total</th>
+                    <th class="text-center py-3">Acciones</th>
+                </tr>
+            </thead>
+            <tbody class="text-center">
+                <tr class="even:bg-gray-50 dark:even:bg-gray-900/50 lg:justify-center">
+                    <td class="p-3 border border-gray-300">123456</td>
+                    <td class="p-3 border border-gray-300">2024-04-01</td>
+                    <td class="p-3 border border-gray-300">Cliente A</td>
+                    <td class="p-3 border border-gray-300">123456789 (Física)</td>
+                    <td class="p-3 border border-gray-300">Vendedor A</td>
+                    <td class="p-3 border border-gray-300">Contado</td>
+                    <td class="p-3 border border-gray-300">25000</td>
+                    <td class="p-3 border border-gray-300">
+                        <button class="btn VerDetalles" title="Editar">
+                            <a asp-action="EditarInventario">
+                                <svg class="svg-inline--fa fa-times fa-w-16" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="times" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M410.3 231l11.3-11.3-33.9-33.9-62.1-62.1L291.7 89.8l-11.3 11.3-22.6 22.6L58.6 322.9c-10.4 10.4-18 23.3-22.2 37.4L1 480.7c-2.5 8.4-.2 17.5 6.1 23.7s15.3 8.5 23.7 6.1l120.3-35.4c14.1-4.2 27-11.8 37.4-22.2L387.7 253.7 410.3 231zM160 399.4l-9.1 22.7c-4 3.1-8.5 5.4-13.3 6.9L59.4 452l23-78.1c1.4-4.9 3.8-9.4 6.9-13.3l22.7-9.1v32c0 8.8 7.2 16 16 16h32zM362.7 18.7L348.3 33.2 325.7 55.8 314.3 67.1l33.9 33.9 62.1 62.1 33.9 33.9 11.3-11.3 22.6-22.6 14.5-14.5c25-25 25-65.5 0-90.5L453.3 18.7c-25-25-65.5-25-90.5 0zm-47.4 168l-144 144c-6.2 6.2-16.4 6.2-22.6 0s-6.2-16.4 0-22.6l144-144c6.2-6.2 16.4-6.2 22.6 0s6.2 16.4 0 22.6z" /></svg>
+                            </a>
+                        </button>
+
+                        <button class="btn btnEliminar" title="NotadeCredito"  onclick="abrirModal('modalNotadeCredito')">
+                            <a >
+                                <svg class="svg-inline--fa fa-eye fa-w-16" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="eye" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M135.2 17.7L128 32H32C14.3 32 0 46.3 0 64S14.3 96 32 96H416c17.7 0 32-14.3 32-32s-14.3-32-32-32H320l-7.2-14.3C307.4 6.8 296.3 0 284.2 0H163.8c-12.1 0-23.2 6.8-28.6 17.7zM416 128H32L53.2 467c1.6 25.3 22.6 45 47.9 45H346.9c25.3 0 46.3-19.7 47.9-45L416 128z" /></svg>
+                            </a>
+                        </button>
+                    </td>
+                </tr>
+
+            </tbody>
+        </table>
     </div>
 </div>
 
 
-<div class="bg-white overflow-auto">
-    <table class="min-w-full bg-white border border-gray-300">
-        <thead class="bg-gray-900 text-white">
-            <tr>
-                <th class="text-center py-3">Factura</th>
-                <th class="text-center py-3">Fecha Emisión</th>
-                <th class="text-center py-3">Cliente</th>
-                <th class="text-center py-3">Vendedor</th>
-                <th class="text-center py-3">Estado</th>
-                <th class="text-center py-3">Total</th>
-                <th class="text-center py-3">Acciones</th>
-            </tr>
-        </thead>
-        <tbody class="text-center">
-            <tr class="even:bg-gray-50 dark:even:bg-gray-900/50 lg:justify-center">
-                <td class="p-3 border border-gray-300">123456</td>
-                <td class="p-3 border border-gray-300">2024-04-01</td>
-                <td class="p-3 border border-gray-300">Cliente A</td>
-                <td class="p-3 border border-gray-300">Vendedor A</td>
-                <td class="p-3 border border-gray-300">Cancelada</td>
-                <td class="p-3 border border-gray-300">$25,000</td>
-                <td class="p-3 border border-gray-300">
-                    <div class="flex justify-center">
-                        <button class="btn btnEditar" title="Editar Template">
-                            <svg class="svg-inline--fa fa-times fa-w-16" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="times" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d=" M410.3 231l11.3-11.3-33.9-33.9-62.1-62.1L291.7 89.8l-11.3 11.3-22.6 22.6L58.6 322.9c-10.4 10.4-18 23.3-22.2 37.4L1 480.7c-2.5 8.4-.2 17.5 6.1 23.7s15.3 8.5 23.7 6.1l120.3-35.4c14.1-4.2 27-11.8 37.4-22.2L387.7 253.7 410.3 231zM160 399.4l-9.1 22.7c-4 3.1-8.5 5.4-13.3 6.9L59.4 452l23-78.1c1.4-4.9 3.8-9.4 6.9-13.3l22.7-9.1v32c0 8.8 7.2 16 16 16h32zM362.7 18.7L348.3 33.2 325.7 55.8 314.3 67.1l33.9 33.9 62.1 62.1 33.9 33.9 11.3-11.3 22.6-22.6 14.5-14.5c25-25 25-65.5 0-90.5L453.3 18.7c-25-25-65.5-25-90.5 0zm-47.4 168l-144 144c-6.2 6.2-16.4 6.2-22.6 0s-6.2-16.4 0-22.6l144-144c6.2-6.2 16.4-6.2 22.6 0s6.2 16.4 0 22.6z" /></svg>
-                        </button>
-                        <botton class="btn btnEliminar" title="Eliminar Abono">
-                            <svg class="svg-inline--fa fa-times fa-w-16" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="trash" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
-                                <path fill="currentColor" d="M135.2 17.7L128 32H32C14.3 32 0 46.3 0 64S14.3 96 32 96H416c17.7 0 32-14.3 32-32s-14.3-32-32-32H320l-7.2-14.3C307.4 6.8 296.3 0 284.2 0H163.8c-12.1 0-23.2 6.8-28.6 17.7zM416 128H32L53.2 467c1.6 25.3 22.6 45 47.9 45H346.9c25.3 0 46.3-19.7 47.9-45L416 128z" />
-                            </svg>
-                        </botton>
-                        <button class="btn VerDetalles" title="Editar Template">
-                            @* <svg class="svg-inline--fa fa-times fa-w-16" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="times" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d=" M410.3 231l11.3-11.3-33.9-33.9-62.1-62.1L291.7 89.8l-11.3 11.3-22.6 22.6L58.6 322.9c-10.4 10.4-18 23.3-22.2 37.4L1 480.7c-2.5 8.4-.2 17.5 6.1 23.7s15.3 8.5 23.7 6.1l120.3-35.4c14.1-4.2 27-11.8 37.4-22.2L387.7 253.7 410.3 231zM160 399.4l-9.1 22.7c-4 3.1-8.5 5.4-13.3 6.9L59.4 452l23-78.1c1.4-4.9 3.8-9.4 6.9-13.3l22.7-9.1v32c0 8.8 7.2 16 16 16h32zM362.7 18.7L348.3 33.2 325.7 55.8 314.3 67.1l33.9 33.9 62.1 62.1 33.9 33.9 11.3-11.3 22.6-22.6 14.5-14.5c25-25 25-65.5 0-90.5L453.3 18.7c-25-25-65.5-25-90.5 0zm-47.4 168l-144 144c-6.2 6.2-16.4 6.2-22.6 0s-6.2-16.4 0-22.6l144-144c6.2-6.2 16.4-6.2 22.6 0s6.2 16.4 0 22.6z" /></svg> *@
-                            <svg class="svg-inline--fa fa-times fa-w-16" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="times" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M128 0C92.7 0 64 28.7 64 64v96h64V64H354.7L384 93.3V160h64V93.3c0-17-6.7-33.3-18.7-45.3L400 18.7C388 6.7 371.7 0 354.7 0H128zM384 352v32 64H128V384 368 352H384zm64 32h32c17.7 0 32-14.3 32-32V256c0-35.3-28.7-64-64-64H64c-35.3 0-64 28.7-64 64v96c0 17.7 14.3 32 32 32H64v64c0 35.3 28.7 64 64 64H384c35.3 0 64-28.7 64-64V384zM432 248a24 24 0 1 1 0 48 24 24 0 1 1 0-48z" /></svg>
-                        </button>
+<div id="modalNotadeCredito" class="modal">
+        <div class="modal-content">
+            <div class="sm:col-span-2">
+                    <div>
+                        <fieldset>
+                            <legend class="block text-sm font-medium leading-6 text-white">Tipo de Nota de Crédito</legend>
+                            <div class="mt-3 flex items-center gap-x-10">
+                                <div class="flex items-center gap-x-2 bg-yellow-100 text-yellow-800 text-md font-medium px-2.5 py-0.5 rounded dark:bg-gray-700 dark:text-blue-400 border border-yellow-400 ">
+                                    <input id="push-everything" name="push-notifications" type="radio" class="h-4 w-4 border-gray-300 text-indigo-600 focus:ring-indigo-600">
+                                    <label for="push-everything" class="block text-sm font-medium leading-6 text-gray-900">Nota de Crédito</label>
+                                </div>
+                                <div class="flex items-center gap-x-2 bg-green-100 text-green-800 text-md font-medium px-2.5 py-0.5 rounded dark:bg-gray-700 dark:text-blue-400 border border-green-400">
+                                    <input id="push-email" name="push-notifications" type="radio" class="h-4 w-4 border-gray-300 text-indigo-600 focus:ring-indigo-600">
+                                    <label for="push-email" class="block text-sm font-medium leading-6 text-gray-900">Nota de Crédito x Monto</label>
+                                </div>
+                            </div>
+                        </fieldset>
+
+                        <br>
+
+                        <button type="submit" class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Guardar</button>
+                        <button class="rounded-md bg-red-600 px-2 py-2 text-sm font-semibold text-white shadow-sm hover:bg-red-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-red-600">Cancelar</button>
                     </div>
-                </td>
-            </tr>
-        </tbody>
-    </table>
-</div>
+                </div>
+        </div>
 </div>
 
+        
