--- a/ADMFacturar/Views/Facturas/RegistroAnulaciones.cshtml
+++ b/ADMFacturar/Views/Facturas/RegistroAnulaciones.cshtml
@@ -4,19 +4,58 @@
 </p>
 <br />
 
+<form>
+    <div class="border-b border-gray-900/10 pb-12">
+        <h2 class="text-base font-semibold leading-7 text-white">Filtros</h2>
+        <div class="mt-4 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-3">
+
+            <div class="sm:col-span-1">
+                <label for="document_number" class="block text-sm font-medium leading-6 text-white">Codigo</label>
+                <div class="mt-2">
+                    <input type="text" id="document_number" name="document_number" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
+                </div>
+            </div>
+
+            <div class="sm:col-span-1">
+                <label for="provider" class="block text-sm font-medium leading-6 text-white">Cedula</label>
+                <div class="mt-2">
+                    <select id="provider" name="provider" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px; height: 35px;">
+                        <option value="">Seleccionar Proveedor</option>
+                        <!-- LECTURA DE LA BD O OPCIONES ESTÁTICAS -->
+                        <option value="Juridica">Juridica</option>
+                        <option value="Fisica">Fisica</option>
+                    </select>
+                </div>
+            </div>
+
+            <div class="sm:col-span-1">
+                <label for="document_number" class="block text-sm font-medium leading-6 text-white">Cliente</label>
+                <div class="mt-2">
+                    <input type="text" id="document_number" name="document_number" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
+                </div>
+            </div>
+        </div>
+    </div>
+</form>
+
 <div class="w-full">
-    <p class="text-xl pb-3 flex items-center text-white">
-        <i class="fas fa-list mr-3"></i> Facturas Anuladas
-    </p>
+    <div class="flex justify-between items-center px-6 py-4 border-b">
+        <p class="text-xl pb-3 flex items-center text-white">
+            <i class="fas fa-list mr-3"></i> Listado de Notas de Credito
+        </p>
+
+    </div>
     <div class="bg-white overflow-auto">
         <table class="min-w-full bg-white border border-gray-300">
             <thead class="bg-gray-900 text-white">
                 <tr>
-                    <th class="text-center py-3"># Factura</th>
+                    <th class="text-center py-3">Código</th>
                     <th class="text-center py-3">Fecha Emisión</th>
                     <th class="text-center py-3">Cliente</th>
+                    <th class="text-center py-3">Cédula (Jurídica / Física)</th>
                     <th class="text-center py-3">Vendedor</th>
-                    <th class="text-center py-3">Estado</th>
+                    <th class="text-center py-3">Condición de Pago</th>
+                    <th class="text-center py-3">Tipo</th>
                     <th class="text-center py-3">Total</th>
                 </tr>
             </thead>
@@ -25,11 +64,26 @@
                     <td class="p-3 border border-gray-300">123456</td>
                     <td class="p-3 border border-gray-300">2024-04-01</td>
                     <td class="p-3 border border-gray-300">Cliente A</td>
+                    <td class="p-3 border border-gray-300">123456789 (Física)</td>
                     <td class="p-3 border border-gray-300">Vendedor A</td>
-                    <td class="p-3 border border-gray-300">Pagado</td>
-                    <td class="p-3 border border-gray-300">$25,000</td>
-                   <!--NO PUSE ACCIONES-->
+                    <td class="p-3 border border-gray-300">Contado</td>
+                    <td class="p-3 border border-gray-300">Nota de Crédito</td>
+                    <td class="p-3 border border-gray-300">25000</td>
                 </tr>
+
+            </tbody>
+            <tbody class="text-center">
+                <tr class="even:bg-gray-50 dark:even:bg-gray-900/50 lg:justify-center">
+                    <td class="p-3 border border-gray-300">123456</td>
+                    <td class="p-3 border border-gray-300">2024-04-01</td>
+                    <td class="p-3 border border-gray-300">Cliente A</td>
+                    <td class="p-3 border border-gray-300">123456789 (Física)</td>
+                    <td class="p-3 border border-gray-300">Vendedor A</td>
+                    <td class="p-3 border border-gray-300">Contado</td>
+                    <td class="p-3 border border-gray-300">Nota de Crédito x Monto</td>
+                    <td class="p-3 border border-gray-300">25000</td>
+                </tr>
+
             </tbody>
         </table>
     </div>
