--- a/ADMFacturar/Views/Inventario/AgregarInventario.cshtml
+++ b/ADMFacturar/Views/Inventario/AgregarInventario.cshtml
@@ -31,10 +31,10 @@
             <div class="sm:col-span-1">
                 <label for="payment_method" class="block text-sm font-medium leading-6 text-white">Forma de Pago</label>
                 <div class="mt-2">
-                    <select id="payment_method" name="payment_method" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+                    <select id="payment_method" name="payment_method" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px; height: 35px;">
                         <option value="">Seleccionar Forma de Pago</option>
-                        <option value="Efectivo">Efectivo</option>
-                        <option value="Tarjeta">Tarjeta</option>
+                        <option value="Credito">Credito</option>
+                        <option value="Contado">Contado</option>
                     </select>
                 </div>
             </div>
@@ -63,7 +63,7 @@
         <br />
         <div class="form-group">
             <input asp-action="Index" type="submit" value="Confirmar" class="btn-info" style="background-color: #3985CD; color: #fff; padding: 5px; border-radius: 5px; ">
-            <input asp-action="AgregarArticulos" type="submit" value="Agregar Articulo" class="btn-info" style="background-color: #3985CD; color: #fff; padding: 5px; border-radius: 5px; ">
+            
             <input asp-action="AgregarArticulos" type="submit" value="Crear Articulo" class="btn-info" style="background-color: #3985CD; color: #fff; padding: 5px; border-radius: 5px; ">
         </div>
     </div>
