--- a/ADMFacturar/Views/Facturas/RegistroAnulaciones.cshtml
+++ b/ADMFacturar/Views/Facturas/RegistroAnulaciones.cshtml
@@ -17,14 +17,9 @@
             </div>
 
             <div class="sm:col-span-1">
-                <label for="provider" class="block text-sm font-medium leading-6 text-white">Cedula</label>
+                <label for="cedula" class="block text-sm font-medium leading-6 text-white">Cedula</label>
                 <div class="mt-2">
-                    <select id="provider" name="provider" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px; height: 35px;">
-                        <option value="">Seleccionar Proveedor</option>
-                        <!-- LECTURA DE LA BD O OPCIONES ESTÁTICAS -->
-                        <option value="Juridica">Juridica</option>
-                        <option value="Fisica">Fisica</option>
-                    </select>
+                    <input type="text" id="total" name="total" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
                 </div>
             </div>
 
