--- a/ADMFacturar/Views/Facturas/AgregarNotadeCredito.cshtml
+++ b/ADMFacturar/Views/Facturas/AgregarNotadeCredito.cshtml
@@ -30,9 +30,13 @@
             </div>
 
             <div class="sm:col-span-1">
-                <label for="cedula" class="block text-sm font-medium leading-6 text-white">Cedula</label>
+                <label for="cedula" class="block text-sm font-medium leading-6 text-white">Cédula</label>
                 <div class="mt-2">
-                    <input type="text" id="total" name="total" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
+                    <select id="cedula" name="cedula" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px; height: 35px;">
+                        <option value="">Seleccionar Tipo de Cédula</option>
+                        <option value="Juridica">Jurídica</option>
+                        <option value="Fisica">Física</option>
+                    </select>
                 </div>
             </div>
 
@@ -59,6 +63,8 @@
                 </div>
             </div>
 
+            
+
             <div class="sm:col-span-1">
                 <label for="total" class="block text-sm font-medium leading-6 text-white">Total</label>
                 <div class="mt-2">
@@ -66,13 +72,29 @@
                 </div>
             </div>
 
-
+            <div class="sm:col-span-1">
+                <div>
+                    <fieldset>
+                        <legend class="block text-sm font-medium leading-6 text-white">Tipo de Nota de Crédito</legend>
+                        <div class="mt-3 flex items-center gap-x-10" style="margin-top: 9px">
+                            <div class="flex items-center gap-x-2 bg-yellow-100 text-yellow-800 text-md font-medium px-2.5 py-0.5 rounded dark:bg-gray-700 dark:text-blue-400 border border-yellow-400 " style="padding-left: 10px; height: 35px;">
+                                <input id="push-everything" name="push-notifications" type="radio" class="h-4 w-4 border-gray-300 text-indigo-600 focus:ring-indigo-600">
+                                <label for="push-everything" class="block text-sm font-medium leading-6 text-gray-900">Nota de Crédito</label>
+                            </div>
+                            <div class="flex items-center gap-x-2 bg-green-100 text-green-800 text-md font-medium px-2.5 py-0.5 rounded dark:bg-gray-700 dark:text-blue-400 border border-green-400" style="padding-left: 10px; height: 35px;">
+                                <input id="push-email" name="push-notifications" type="radio" class="h-4 w-4 border-gray-300 text-indigo-600 focus:ring-indigo-600">
+                                <label for="push-email" class="block text-sm font-medium leading-6 text-gray-900">Nota de Crédito x Monto</label>
+                            </div>
+                        </div>
+                    </fieldset>
+                </div>
+            </div>
 
         </div>
     </div>
     <div>
-            <a asp-action="Index" class="max-w-xs p-4 bg-none border border-gray-200 rounded-lg shadow dark:bg-white-800 dark:border-white-700 hover:bg-white hover:text-blue-500 text-white" >Guardar</a>
-            <a asp-action="Index" class="max-w-xs p-4 bg-none border border-gray-200 rounded-lg shadow dark:bg-white-800 dark:border-white-700 hover:bg-white hover:text-blue-500 text-white" >Cancelar</a>
+        <a asp-action="Index" class="max-w-xs p-4 bg-none border border-gray-200 rounded-lg shadow dark:bg-white-800 dark:border-white-700 hover:bg-white hover:text-blue-500 text-white">Guardar</a>
+        <a asp-action="Index" class="max-w-xs p-4 bg-none border border-gray-200 rounded-lg shadow dark:bg-white-800 dark:border-white-700 hover:bg-white hover:text-blue-500 text-white">Cancelar</a>
     </div>
 
 </form>
