--- a/ADMFacturar/Views/Facturas/EditarFactura.cshtml
+++ b/ADMFacturar/Views/Facturas/EditarFactura.cshtml
@@ -30,9 +30,13 @@
             </div>
 
             <div class="sm:col-span-1">
-                <label for="cedula" class="block text-sm font-medium leading-6 text-white">Cedula</label>
+                <label for="cedula" class="block text-sm font-medium leading-6 text-white">Cédula</label>
                 <div class="mt-2">
-                    <input type="text" id="total" name="total" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
+                    <select id="cedula" name="cedula" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px; height: 35px;">
+                        <option value="">Seleccionar Tipo de Cédula</option>
+                        <option value="Juridica">Jurídica</option>
+                        <option value="Fisica">Física</option>
+                    </select>
                 </div>
             </div>
 
@@ -66,13 +70,11 @@
                 </div>
             </div>
 
-
-
         </div>
     </div>
     <div>
-            <a asp-action="Index" class="max-w-xs p-4 bg-none border border-gray-200 rounded-lg shadow dark:bg-white-800 dark:border-white-700 hover:bg-white hover:text-blue-500 text-white" >Guardar</a>
-            <a asp-action="Index" class="max-w-xs p-4 bg-none border border-gray-200 rounded-lg shadow dark:bg-white-800 dark:border-white-700 hover:bg-white hover:text-blue-500 text-white" >Cancelar</a>
+        <a asp-action="Index" class="max-w-xs p-4 bg-none border border-gray-200 rounded-lg shadow dark:bg-white-800 dark:border-white-700 hover:bg-white hover:text-blue-500 text-white">Confirmar</a>
+        <a asp-action="Index" class="max-w-xs p-4 bg-none border border-gray-200 rounded-lg shadow dark:bg-white-800 dark:border-white-700 hover:bg-white hover:text-blue-500 text-white">Cancelar</a>
     </div>
 
 </form>
